z-index fix for header

--- a/sites/all/themes/occupy_directory/css/header-layout.css
+++ b/sites/all/themes/occupy_directory/css/header-layout.css
@@ -228,7 +228,7 @@ nav a:hover { background-color: #000; color: #fc0; }
   */
   #region-search {
     position: relative;
-    z-index: 1000;
+    z-index: 450;
   }
 
   #region-menu{
